
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint16 ;
typedef int STREAM ;




 int in_uint16_le (int ,int) ;
 int process_orders (int ) ;

__attribute__((used)) static void
process_update_pdu(STREAM s)
{
 uint16 update_type;

 in_uint16_le(s, update_type);

 switch (update_type)
 {
  case 129:
   process_orders(s);
   break;

  case 128:
   break;
 }
}
